refactor(core): remove deprecated classes and contracts for external results and uslottery modules (#66)
- Deleted unused classes, interfaces, and records in `external results` and `uslottery` modules.
- Cleaned up legacy projection catalogs, fetch ports, and utility mappers.
- Aligned with ongoing cleanup of deprecated contracts to streamline core services.